entropy (#207)
* Saner resource management. Don't set exec on clients.

* don't share forks. Use UE for model domain testing.

* remove

* logging, fpr adjus

* Clean and Smooth Join by requiring bft majorities before publish, etc.

Clean up pending/etc logic as well.

* will it blend?

* cleaner committee join, revert ReliableBroadcaster fpr changes

The bloom window needs a very low FPR

* Believe the view Reconfiguration is now fixed.

Significant work on join protocol.  Added new Chillin' state to ensure we get full membership through slow joiners.

* flew too close to the sun

* use UE

:: sigh ::

* use UE

* another attempt

* yet again

* ChurnTest

* ahem no

* don't reuse forks

* global platform threads

* no globals

* lighter weight

* test opti. reuse forks 🤞

Use UE with cached thread pools. tweak gossip durations, some epoch lengths, etc.

* don't reuse forks

* mtls uses plat cached threads by default